<resources>
    <string name="app_name">hw2</string>
    <string name="home_title">Find your brew!</string>
    <string name="start_button">Get Started</string>
    <string name="search_name">Search by beer name</string>
    <string name="brewed">Brewed</string>
    <string name="date">mm/yyyy</string>
    <string name="to">to</string>
    <string name="switch_second_activity">High-Point Beer?</string>
    <string name="show_results">Show Results</string>
    <string name="toast_message">Fill at least one field</string>
    <string name="toast_message_date">Date in incorrect format (MM/YYYY)</string>
    <string name="results_count">We found % results</string>
</resources>